updated Resume shared with googlDrive

--- a/skill.html
+++ b/skill.html
@@ -71,7 +71,7 @@
                     </div>
     
                     <div class="btn">
-                        <a href="https://drive.google.com/file/d/10kG5nRfvvuxS7aQzZCJsi9wM6mwvmu1c/view?usp=drive_link">
+                        <a href="https://drive.google.com/file/d/1u3GiIl7HUHNBECOezxrS_JJYqhfG2YjP/view?usp=sharing">
                             <button class="btn-resume"><span>R</span>esume</button>
                         </a>
                     </div>
